# openeval

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: demo_output.txt  logo.txt  logo_prompt.txt  record_demo.sh  terminal_output.txt
examples/: demo_agent.py  demo_ollama.py  quickstart.py  quickstart_ollama.py  run_eval.py
openeval/: __init__.py  __main__.py  cli.py  cost.py  dataset.py  eval.py  experiment.py  report.py  test_case.py  tracing.py  types.py
openeval/scorers/: __init__.py  base.py  contains.py  exact_match.py  faithfulness.py  llm_judge.py  similarity.py  tool_correctness.py
tests/: conftest.py  test_cli.py  test_cost_tracking.py  test_dataset.py  test_eval_runner.py  test_integration_ollama.py  test_integration_real_llm.py  test_report.py  test_scorers.py  test_test_case.py  test_tracing.py
