[project]
name = "openeval"
version = "0.1.0"
description = "Open-source LLM evaluation framework with CLI-first workflow and CI/CD quality gates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenEval Contributors"}
]
keywords = ["llm", "evaluation", "mlops", "testing", "ai", "agents", "rag", "ci/cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/edmontecristo/openeval"
Documentation = "https://github.com/edmontecristo/openeval#readme"
Repository = "https://github.com/edmontecristo/openeval"
Issues = "https://github.com/edmontecristo/openeval/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
openeval = "openeval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests (no API calls)",
    "integration: tests that call real LLM APIs",
    "slow: tests that take >5 seconds",
]
